update tao vat tu

--- a/Trang-chu-admin/Trang-chu-admin.html
+++ b/Trang-chu-admin/Trang-chu-admin.html
@@ -72,7 +72,7 @@
                   <span class="line"></span>
                 </div>
                 <li class="item">
-                  <a href="#" class="link flex">
+                  <a href="../Vat-tu-va-thiet-bi/Vat-tu-va-thiet-bi.html" class="link flex">
                     <i class="bx bxs-data"></i>
                     <span>Vật tư và thiết bị</span>
                   </a>
