--- a/Trang-chu-admin/Trang-chu-admin.html
+++ b/Trang-chu-admin/Trang-chu-admin.html
@@ -169,7 +169,7 @@
                 <button class="btn btn-outline-info ms-1">Search</button>
               </form>
             </div>
-            <button class="btn-out btn btn-outline-danger">
+            <button class="btn-out btn btn-outline-danger" style="display: flex; justify-content: center; align-items: center;">
               <a class="btn" href="../Trang-chu/Trang-chu.html">Đăng xuất</a>
             </button>
           </div>
