them phan backend danh muc va vat tu

--- a/Vat-tu-va-thiet-bi/Vat-tu-va-thiet-bi.html
+++ b/Vat-tu-va-thiet-bi/Vat-tu-va-thiet-bi.html
@@ -207,7 +207,10 @@
                             <p>Kích thước</p>
                             <input type="text" id="kich-thuoc" required>
                             <p>Danh mục</p>
-                            <input type="search" id="danh-muc" autocomplete="off" role="combobox" aria-haspopup="listbox" aria-expanded="false" aria-autocomplete="list"  required>
+                            <input type="search" id="danh-muc" list="browsers" required>
+                            <datalist id="browsers">
+                              
+                            </datalist>
                             <p>Màu</p>
                             <input type="text" id="mau" required>
                             <p>Ảnh</p>
