--- a/Vat-tu-va-thiet-bi/Vat-tu-va-thiet-bi.html
+++ b/Vat-tu-va-thiet-bi/Vat-tu-va-thiet-bi.html
@@ -251,22 +251,23 @@
                       </div>
                       <div class="modal-body">
                       <div class="mb-3">
-                        <button class="them-vat-tu btn btn-info" style="color: white;">Thêm vật tư</button>
+                        <button class="them-vat-tu btn btn-info" style="color: white;" onclick="render_nhap()">Thêm vật tư
+
+                        </button>
                       </div>
                       <div>
-                        <table style="table-layout: auto;" class="table-phieu-nhap table ">
+                        <table style="table-layout: auto;" class="table-phieu-nhap table "
+                        id="render-nhap">
                           <thead>
                             <tr>
-                              <th>Tên vật tư</th>
+                              <th style="width: 40%">Tên vật tư</th>
                               <th>Số lượng</th>
                               <th>Hành động</th>
                             </tr>
                           </thead>
                           <tbody>
                             <tr>
-                              <td>
-                                
-                              </td>
+                             
                             </tr>
                           </tbody>
                         </table>
@@ -274,7 +275,7 @@
                       </div>
                       <div class="modal-footer">
                           <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Hủy</button>
-                          <button onclick="add()" type="button" class="btn btn-info" >Nhập</button>
+                          <button type="button" class="btn btn-info" >Nhập</button>
                         </div>
                   </div>
               </div>
