--- a/Trang-chu-admin/Trang-chu-admin.html
+++ b/Trang-chu-admin/Trang-chu-admin.html
@@ -91,13 +91,13 @@
                   <span class="line"></span>
                 </div>
                 <li class="item">
-                  <a href="#" class="link flex">
+                  <a href="../Nhan-vien/Nhan-vien.html" class="link flex">
                     <i class="bx bxs-group"></i>
                     <span>Nhân viên</span>
                   </a>
                 </li>
                 <li class="item">
-                  <a href="#" class="link flex">
+                  <a href="../Phong-ban/Phong-ban.html" class="link flex">
                     <i class="bx bxs-building"></i>
                     <span>Phòng ban</span>
                   </a>
