--- a/Trang-chu-admin/Trang-chu-admin.html
+++ b/Trang-chu-admin/Trang-chu-admin.html
@@ -310,7 +310,7 @@
             </div>
             <div class="icon-shopping">
               <i class='bx bxs-shopping-bag'></i>
-              <p id="">1</p>
+              <p class="number-vat-tu" data-name="Kim tiêm"></p>
             </div>
           </div>
 
@@ -322,7 +322,7 @@
             </div>
             <div class="icon-shopping">
               <i class='bx bxs-shopping-bag'></i>
-              <p id="">1</p>
+              <p class="number-vat-tu" data-name="Khẩu trang">1</p>
             </div>
           </div>
 
@@ -334,7 +334,7 @@
             </div>
             <div class="icon-shopping">
               <i class='bx bxs-shopping-bag'></i>
-              <p id="">1</p>
+              <p class="number-vat-tu" data-name="Áo Blouse"></p>
             </div>
           </div>
 
@@ -346,7 +346,7 @@
             </div>
             <div class="icon-shopping">
               <i class='bx bxs-shopping-bag'></i>
-              <p id="">1</p>
+              <p class="number-vat-tu" data-name="áo phẫu thuật"></p>
             </div>
           </div>
 
@@ -376,7 +376,8 @@
                       <p>Màu</p>
                       <p>Xanh</p>
                       <p>Số lượng</p>
-                      <p>1</p>
+                      <p class="number-vat-tu" data-name="áo phẫu thuật"></p>
+                      
                       <p>Kích thước</p>
                       <p>1m10</p>
                     </div>
@@ -413,7 +414,7 @@
                       <p>Màu</p>
                       <p>Trắng</p>
                       <p>Số lượng</p>
-                      <p>1</p>
+                      <p class="number-vat-tu" data-name="kim tiêm"></p>
                       <p>Kích thước</p>
                       <p>15cm</p>
                     </div>
@@ -449,7 +450,7 @@
                       <p>Màu</p>
                       <p>Xanh</p>
                       <p>Số lượng</p>
-                      <p>1</p>
+                      <p class="number-vat-tu" data-name="Khẩu trang"></p>
                       <p>Kích thước</p>
                       <p>11cm</p>
                     </div>
@@ -486,7 +487,7 @@
                       <p>Màu</p>
                       <p>Trắng</p>
                       <p>Số lượng</p>
-                      <p>1</p>
+                      <p class="number-vat-tu" data-name="áo blouse"></p>
                       <p>Kích thước</p>
                       <p>1m4</p>
                     </div>
