--- a/Trang-chu/Trang-chu.html
+++ b/Trang-chu/Trang-chu.html
@@ -174,7 +174,7 @@
               <div class="btn_login">
                   <button class="btn-login">Đăng nhập</button>
               </div>
-              <div class="text_register">Bạn chưa có tài khoản?<a href="../Register/Register.html"> đăng ký!</a></div>
+              <div class="text_register">Bạn chưa có tài khoản?<a href="../Register/Register.html"> Liên hệ admin</a></div>
               </div>
           </div>
       </div>
