--- a/Vat-tu-va-thiet-bi/Vat-tu-va-thiet-bi.html
+++ b/Vat-tu-va-thiet-bi/Vat-tu-va-thiet-bi.html
@@ -275,7 +275,7 @@
                       </div>
                       <div class="modal-footer">
                           <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Hủy</button>
-                          <button type="button" class="btn btn-info" >Nhập</button>
+                          <button type="button" class="nhap-phieu-kho btn btn-info" >Nhập</button>
                         </div>
                   </div>
               </div>
