--- a/Vat-tu-va-thiet-bi/Vat-tu-va-thiet-bi.html
+++ b/Vat-tu-va-thiet-bi/Vat-tu-va-thiet-bi.html
@@ -272,10 +272,59 @@
                           </tbody>
                         </table>
                       </div>
+                      <div class="mt-5">
+                        <label>Tên phiếu nhập kho: </label>
+                        <input style="width: 68.3%;"  type="text" id="name-phieu-nhap-kho">
+                      </div>
                       </div>
                       <div class="modal-footer">
                           <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Hủy</button>
                           <button type="button" class="nhap-phieu-kho btn btn-info" >Nhập</button>
+                        </div>
+                  </div>
+              </div>
+            </div>
+
+
+            <!-- phiếu xuất -->
+            <div class="modal fade" id="modal-xuat">
+              <div class="modal-dialog">
+                  <div class="modal-content">
+                      <div class="modal-header d-flex justify-content-center position-relative">
+                          <h4>Phiếu xuất kho</h4>
+                          <button type="button" class="btn-close position-absolute end-0 me-3" data-bs-dismiss="modal"></button>
+                      </div>
+                      <div class="modal-body">
+                      <div class="mb-3">
+                        <button class="them-vat-tu btn btn-info" style="color: white;" onclick="render_xuat()">Thêm vật tư
+
+                        </button>
+                      </div>
+                      <div>
+                        <table style="table-layout: auto;" class="table-phieu-xuat table "
+                        id="render-xuat">
+                          <thead>
+                            <tr>
+                              <th style="width: 40%">Tên vật tư</th>
+                              <th>Số lượng</th>
+                              <th>Hành động</th>
+                            </tr>
+                          </thead>
+                          <tbody>
+                            <tr>
+                             
+                            </tr>
+                          </tbody>
+                        </table>
+                      </div>
+                      <div class="mt-5">
+                        <label>Tên phiếu xuất kho: </label>
+                        <input style="width: 69.5%;"  type="text" id="name-phieu-xuất-kho">
+                      </div>
+                      </div>
+                      <div class="modal-footer">
+                          <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Hủy</button>
+                          <button type="button" class="xuat-phieu-kho btn btn-info" >Xuất</button>
                         </div>
                   </div>
               </div>
