complete nhap xuat con tao

--- a/Vat-tu-va-thiet-bi/Vat-tu-va-thiet-bi.html
+++ b/Vat-tu-va-thiet-bi/Vat-tu-va-thiet-bi.html
@@ -279,7 +279,7 @@
                       </div>
                       <div class="modal-footer">
                           <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Hủy</button>
-                          <button type="button" class="nhap-phieu-kho btn btn-info" >Nhập</button>
+                          <button type="button" data-bs-dismiss="modal" class="nhap-phieu-kho btn btn-info" >Nhập</button>
                         </div>
                   </div>
               </div>
@@ -324,7 +324,7 @@
                       </div>
                       <div class="modal-footer">
                           <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Hủy</button>
-                          <button type="button" class="xuat-phieu-kho btn btn-info" >Xuất</button>
+                          <button type="button"  data-bs-dismiss="modal" class="xuat-phieu-kho btn btn-info" >Xuất</button>
                         </div>
                   </div>
               </div>
