--- a/Vat-tu-va-thiet-bi/Vat-tu-va-thiet-bi.html
+++ b/Vat-tu-va-thiet-bi/Vat-tu-va-thiet-bi.html
@@ -116,7 +116,7 @@
                   </a>
                 </li>
                 <li class="item">
-                  <a href="#" class="link flex">
+                  <a href="../Phieu-nhap/Phieu-nhap.html" class="link flex">
                     <i class="bx bxs-archive-in"></i>
                     <span>Phiếu nhập</span>
                   </a>
@@ -279,7 +279,7 @@
                       </div>
                       <div class="modal-footer">
                           <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Hủy</button>
-                          <button type="button" data-bs-dismiss="modal" class="nhap-phieu-kho btn btn-info" >Nhập</button>
+                          <button id="importButton" type="button" data-bs-dismiss="modal" class="nhap-phieu-kho btn btn-info" >Nhập</button>
                         </div>
                   </div>
               </div>
