--- a/Phieu-nhap/Phieu-nhap.html
+++ b/Phieu-nhap/Phieu-nhap.html
@@ -125,7 +125,10 @@
                   </a>
                 </li>
                 <li class="item">
-                  <a href="../Vat-tu-va-thiet-bi/Vat-tu-va-thiet-bi.html" class="link flex">
+                  <a
+                    href="../Vat-tu-va-thiet-bi/Vat-tu-va-thiet-bi.html"
+                    class="link flex"
+                  >
                     <i class="bx bxs-archive-in"></i>
                     <span>Phiếu nhập</span>
                   </a>
