compelete phieu xuat

--- a/Phieu-xuat/Phieu-xuat.html
+++ b/Phieu-xuat/Phieu-xuat.html
@@ -29,8 +29,8 @@
       href="https://fonts.googleapis.com/css2?family=Marck+Script&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="Phieu-nhap.css" />
-    <script src="Phieu-nhap.js" defer></script>
+    <link rel="stylesheet" href="Phieu-xuat.css" />
+    <script src="Phieu-xuat.js" defer></script>
   </head>
   <body>
     <div class="row">
@@ -118,13 +118,13 @@
                   <span class="title">Document</span>
                   <span class="line"></span>
                 </div>
-                <li class="item">
+                <li class="item el-active">
                   <a href="../Phieu-xuat/Phieu-xuat.html" class="link flex">
                     <i class="bx bxs-archive-out"></i>
                     <span>Phiếu xuất</span>
                   </a>
                 </li>
-                <li class="item el-active">
+                <li class="item ">
                   <a
                     href="../Vat-tu-va-thiet-bi/Vat-tu-va-thiet-bi.html"
                     class="link flex"
@@ -191,7 +191,7 @@
           </div>
         </nav>
         <div class="colum-title">
-          <p>Phiếu nhập</p>
+          <p>Phiếu xuất</p>
         </div>
 
         <table class="table-danh-muc table table-hover table" id="render">
@@ -199,8 +199,10 @@
             <tr>
               <th>STT</th>
               <th>ID</th>
-              <th>Tên phiếu nhập</th>
-              <th>Ngày nhập</th>
+              <th>Tên phiếu xuất</th>
+              <th>Ngày xuất</th>
+              <th>Nhân viện nhận</th>
+              <th>Phòng bạn nhận</th>
             </tr>
           </thead>
           <tbody>
