--- a/Vat-tu-va-thiet-bi/Vat-tu-va-thiet-bi.html
+++ b/Vat-tu-va-thiet-bi/Vat-tu-va-thiet-bi.html
@@ -139,7 +139,7 @@
                   <span class="line"></span>
                 </div>
                 <li class="item">
-                  <a href="#" class="link flex">
+                  <a href="../Phieu-xuat/Phieu-xuat.html" class="link flex">
                     <i class="bx bxs-archive-out"></i>
                     <span>Phiếu xuất</span>
                   </a>
@@ -391,7 +391,7 @@
                     Hủy
                   </button>
                   <button
-                    id="importButton"
+                    id="exportButton"
                     type="button"
                     data-bs-dismiss="modal"
                     class="nhap-phieu-kho btn btn-info"
@@ -451,7 +451,7 @@
                       <input
                         style="width: 69.5%"
                         type="text"
-                        id="name-phieu-xuất-kho"
+                        id="name-phieu-xuat-kho"
                       />
                     </div>
                     <div class="mt-1">
@@ -495,6 +495,7 @@
                     Hủy
                   </button>
                   <button
+                    id="importButton"
                     type="button"
                     data-bs-dismiss="modal"
                     class="xuat-phieu-kho btn btn-info"
