--- a/Phong-ban/Phong-ban.html
+++ b/Phong-ban/Phong-ban.html
@@ -116,7 +116,7 @@
                   </a>
                 </li>
                 <li class="item">
-                  <a href="#" class="link flex">
+                  <a href="../Phieu-nhap/Phieu-nhap.html" class="link flex">
                     <i class="bx bxs-archive-in"></i>
                     <span>Phiếu nhập</span>
                   </a>
