--- a/Phieu-xuat/Phieu-xuat.html
+++ b/Phieu-xuat/Phieu-xuat.html
@@ -126,7 +126,7 @@
                 </li>
                 <li class="item ">
                   <a
-                    href="../Vat-tu-va-thiet-bi/Vat-tu-va-thiet-bi.html"
+                    href="../Phieu-nhap/Phieu-nhap.html"
                     class="link flex"
                   >
                     <i class="bx bxs-archive-in"></i>
