--- a/Phong-ban/Phong-ban.html
+++ b/Phong-ban/Phong-ban.html
@@ -110,7 +110,7 @@
                   <span class="line"></span>
                 </div>
                 <li class="item">
-                  <a href="#" class="link flex">
+                  <a href="../Phieu-xuat/Phieu-xuat.html" class="link flex">
                     <i class="bx bxs-archive-out"></i>
                     <span>Phiếu xuất</span>
                   </a>
