--- a/Danh-muc/Danh-muc.html
+++ b/Danh-muc/Danh-muc.html
@@ -110,13 +110,13 @@
                   <span class="line"></span>
                 </div>
                 <li class="item">
-                  <a href="#" class="link flex">
+                  <a href="../Phieu-xuat/Phieu-xuat.html" class="link flex">
                     <i class="bx bxs-archive-out"></i>
                     <span>Phiếu xuất</span>
                   </a>
                 </li>
                 <li class="item">
-                  <a href="#" class="link flex">
+                  <a href="../Phieu-nhap/Phieu-nhap.html" class="link flex">
                     <i class="bx bxs-archive-in"></i>
                     <span>Phiếu nhập</span>
                   </a>
@@ -209,7 +209,7 @@
                         <th>STT</th>
                         <th>ID</th>
                         <th>Tên danh mục</th>
-                        <th>Mô tả</th>
+                        <th style="width: 45%;">Mô tả</th>
                         <th>Hành động</th>
                     </tr>
                 </thead>
@@ -224,6 +224,17 @@
                 </tbody>
             </table>
         </div>
+      </div>
+    </div>
+    <div id="alert-container"></div>
+    <div id="confirmDelete" class="popover-content d-none">
+      <div class="popover-heading">
+        <i style='color: orange; font-size: 20px; margin-right: 5px;' class='bx bxs-error bx-flashing'></i>
+        <span>Bạn có muốn xóa không?</span>
+      </div>
+      <div class="popover-body">
+        <button class="btn btn-outline-primary btn-sm cancel">Hủy</button>
+        <button class="btn btn-outline-danger btn-sm  xoa-real">Có</button>
       </div>
     </div>
   </body>
