--- a/Tai-Khoan/Tai-Khoan.html
+++ b/Tai-Khoan/Tai-Khoan.html
@@ -102,13 +102,13 @@
                 <span class="line"></span>
               </div>
               <li class="item">
-                <a href="#" class="link flex">
+                <a href="../Phieu-xuat/Phieu-xuat.html" class="link flex">
                   <i class="bx bxs-archive-out"></i>
                   <span>Phiếu xuất</span>
                 </a>
               </li>
               <li class="item">
-                <a href="#" class="link flex">
+                <a href="../Phieu-nhap/Phieu-nhap.html" class="link flex">
                   <i class="bx bxs-archive-in"></i>
                   <span>Phiếu nhập</span>
                 </a>
