--- a/Tai-Khoan/Tai-Khoan.html
+++ b/Tai-Khoan/Tai-Khoan.html
@@ -114,7 +114,7 @@
                 </a>
               </li>
               <li class="item">
-                <a href="#" class="link flex">
+                <a href="../Bao-cao/Bao-cao.html" class="link flex">
                   <i class="bx bxs-folder-minus"></i>
                   <span>Báo cáo</span>
                 </a>
