--- a/Trang-chu-users/Trang-chu-users.html
+++ b/Trang-chu-users/Trang-chu-users.html
@@ -104,6 +104,7 @@
                 <div class="search-box-container">
                   <i class='bx bx-search search-icon'></i>
                   <input
+                  id="search-box"
                     class="search-box form-control me-2"
                     type="text"
                     placeholder="Tìm kiếm vật tư và thiết bị"
@@ -446,7 +447,7 @@
     </div>
     <div class="modal fade" id="modal-nhap">
       <div class="modal-dialog">
-          <div class="modal-content">
+          <div class="modal-content" style="width: 550px;">
               <div class="modal-header d-flex justify-content-center position-relative">
                   <h4>Phiếu yêu cầu</h4>
                   <button type="button" class="btn-close position-absolute end-0 me-3" data-bs-dismiss="modal"></button>
@@ -462,8 +463,9 @@
                 id="render-nhap">
                   <thead>
                     <tr>
-                      <th style="width: 40%">Tên vật tư</th>
-                      <th style="width: 30%;">Số lượng</th>
+                      <th style="width: 30%">Tên vật tư</th>
+                      <th style="width: 30%">Người yêu cầu</th>
+                      <th style="width: 20%;">Số lượng</th>
                       <th>Hành động</th>
                     </tr>
                   </thead>
