--- a/Vat-tu-va-thiet-bi/Vat-tu-va-thiet-bi.html
+++ b/Vat-tu-va-thiet-bi/Vat-tu-va-thiet-bi.html
@@ -554,6 +554,7 @@
                   <tr>
                     <th>STT</th>
                     <th>Tên vật tư</th>
+                    <th>Người yêu cầu</th>
                     <th>Số lượng</th>
                     <th style="width: 20%;">Chức năng</th>
                   </tr>
@@ -591,10 +592,11 @@
         localStorage.setItem("YeuCauData", JSON.stringify(dataPb));
       }
 
-      function addNewItem(tenVatTu, soLuong) {
+      function addNewItem(tenVatTu, nguoiDung, soLuong) {
         const newItem = {
           tenVatTu,
           soLuong,
+          nguoiDung,
         };
         dataPb.push(newItem);
         saveData1();
@@ -610,6 +612,7 @@
           row.innerHTML = `
             <td>${index + 1}</td>
             <td>${item.tenVatTu}</td>
+            <td>${item.nguoiDung}</td>
             <td>${item.soLuong}</td>
             <td>
                 <button onclick="deleteItem1(${index})" class="btn-xoa btn btn-danger">Xóa</button>
